Fix spacing for headers

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -58,6 +58,7 @@ dl,
 figure,
 %vertical-rhythm {
   margin-bottom: calc($spacing-unit / 2);
+  margin-top: calc($spacing-unit / 2);
 }
 
 /**
